# aws-cloud-arch-labs

./: index.md
.github/workflows/: auth.yml  container.yml  home.yml
aws-cloud-arch/: primary_region_rds_master.py  read_replica.py
aws-cloud-arch/recoverability/: estimates.txt
aws-cloud-arch/screenshots/: log_primary.txt
aws-cloud-arch/security/: DevOpsPipeline.pptx  E1T5.txt  E2T2.txt  E3T1.txt  E4T1.txt  E4T4.txt  E5T2.txt  ~$DevOpsPipeline.pptx
distributed-systems/distriuted-doc-search/: pom.xml
distributed-systems/zoo-keeper/: .project  pom.xml
micro-frontends/simple-ecomm-app-js/: README.md
micro-frontends/simple-mf-reactjs-aws/: README.md
server-side-redering-ads-nextjs/static/: countries.json
server-side-redering-nextjs/components/: head.js
server-side-redering-nextjs/static/: america.json  asia.json
ssr-nextjs/: README.md  package.json
ssr-nextjs/pages/: index.js
ssr-nextjs/static/: europe.json
tform/ec2-ipv6/: ec2.tf  igw_rt.tf  main.tf  security.tf  subnet.tf  vpc.tf
tform/ec2-with-internet-gw/: ec2.tf  overview.drawio  security.tf
tform/microservices-pub-pvt-subnets/: README.md
tform/s3-static-website-with-lifecycle-policies/: README.md  s3.tf
tform/simple-lambda/: README.md  account.tf  api-gw.tf  cognito.tf  dynamodb.tf  kms.tf  (+4 more)
tform/simple-microservice/services/sample_db/: Cargo.toml  Dockerfile
tform/simple-microservice/services/sample_db/src/: main.rs  structs.rs
tform/simple-microservice/services/sample_front_end/: Cargo.toml  Dockerfile
tform/simple-microservice/services/sample_front_end/src/: main.rs
(+127 files in other folders)
