[package]
name = "sample_front_end"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.4.0"
log = "0.3.7"
ordered-float = "2.0"
try_from = "0.2.0"
serde_derive = "1.0.130"
serde = "1.0.130"
serde_json = "1.0.68"